--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "proxy": "5000",
+  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
     "@paypal/react-paypal-js": "^8.1.3",
